--- a/sections/index-card-carousel.liquid
+++ b/sections/index-card-carousel.liquid
@@ -10,7 +10,7 @@
         {% for block in section.blocks %}
         <div class="col" style="width: {{ col_max_width }}rem;" {{ block.shopify_attributes }}>
           <div class="card h-100">
-            <img class="w-100" src="{{ block.settings.image | img_url: "414x414", scale: 2, crop: "center" }}" class="card-img-top" alt="{{ block.settings.image.alt }}">
+            <img class="img-fluid card-img-top" loading="lazy" width="{{ block.settings.image.width }}" height="{{ block.settings.image.height }}" src="{{ block.settings.image | img_url: '414x414', scale: 2, crop: 'center' }}" alt="{{ block.settings.image.alt }}">
             <div class="card-body">
               <h5 class="card-title">{{ block.settings.headline }}</h5>
               <p class="card-text">{{ block.settings.description }}</p>
