--- a/snippets/drawer-cart.liquid
+++ b/snippets/drawer-cart.liquid
@@ -8,7 +8,7 @@
       {% if cart.item_count > 0 %}
       <div class="cart__items">
         {% for item in cart.items %}
-          {% render 'drawer-cart-item.liquid' item: item %}
+          {% render 'drawer-cart-item' item: item %}
         {% endfor %}
       </div>
 
@@ -35,7 +35,7 @@
       </div>
 
       <div class="cart__crossell">
-        
+
       </div>
 
       {% else %}
