--- a/snippets/drawer-nav.liquid
+++ b/snippets/drawer-nav.liquid
@@ -1,6 +1,7 @@
 <div class="offcanvas offcanvas-start" tabindex="-1" id="nav-drawer" aria-labelledby="offcanvasLabel">
 
   <div class="offcanvas-header">
+    <h5 class="offcanvas-title" id="offcanvasLabel">Shop</h5>
     <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
 
@@ -12,9 +13,11 @@
       </div>
     </form>
 
-    {% render 'linklist-flush', list: linklists.main-menu %}
-
-    {% render 'linklist-flush', list: linklists.secondary-menu %}
+    <nav>
+    {% render 'linklist-navlink', list: linklists.main-menu %}
+    <hr>
+    {% render 'linklist-navlink', list: linklists.secondary-menu %}
+    </nav>
 
   </div>
 </div>
