--- a/templates/collection.list.liquid
+++ b/templates/collection.list.liquid
@@ -7,7 +7,7 @@
       {{ product.price | money }}
       {% unless product.available %}<br><strong>sold out</strong>{% endunless %}
       <a href="{{ product.url | within: collection }}">
-        <img src="{{ product.featured_image.src | img_url: 'large' }}" alt="{{ product.featured_image.alt | escape }}">
+        <img class="img-fluid" loading="lazy" width="{{ product.featured_image.width }}" height="{{ product.featured_image.height }}" src="{{ product.featured_image.src | img_url: 'large' }}" alt="{{ product.featured_image.alt | escape }}">
       </a>
     </div>
   {% else %}
