--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -1,3 +1,5 @@
+{% assign current_variant = product.selected_or_first_available_variant %}
+
 <div class="container">
   <div class="row g-0 mb-3">
 
@@ -13,7 +15,7 @@
         <div class="carousel-inner">
           {% for image in product.images %}
             <div class="carousel-item{% if forloop.first == true %} active{% endif%}">
-              <img src="{{ image.src | img_url: 'compact' }}" class="d-block w-100" alt="{{ image.alt | escape }}">
+              <img src="{{ image.src | img_url: '576x', scale: 2 }}" class="d-block img-fluid" width="{{ image.width }}" height="{{ image.height }}" loading="lazy" alt="{{ image.alt | escape }}">
             </div>
           {% endfor %}
         </div>
@@ -21,7 +23,7 @@
 
       <div id="productImagesGrid" class="d-none d-sm-block">
       {% for image in product.images %}
-          <img src="{{ image.src | img_url: 'compact' }}" class="w-100" alt="{{ image.alt | escape }}">
+          <img src="{{ image.src | img_url: '768x', scale: 2 }}" class="img-fluid" width="{{ image.width }}" height="{{ image.height }}" loading="lazy" alt="{{ image.alt | escape }}">
       {% endfor %}
       </div>
     </div>
@@ -54,40 +56,82 @@
           </div>
         </form>
 
-        <div class="accordion mb-3" id="accordionExample">
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="headingOne">
-              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                Description
-              </button>
-            </h2>
-            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-              <div class="accordion-body">
-                <div>{{ product.description }}</div>
-              </div>
-            </div>
-          </div>
+        <script src="{{ 'option_selection.js' | shopify_asset_url }}" defer></script>
+        <script>
+          var selectCallback = function(variant, selector) {
+            // change ATC button state
 
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="headingTwo">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-                Other Thing
-              </button>
-            </h2>
-            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-              <div class="accordion-body">
-                <div>other thing</div>
-              </div>
-            </div>
-          </div>
-        </div>
+            if (typeof variant !== "undefined" && variant !== null) {
+              if (variant.available) {
+                // variant available
+                enableSubmitButton();
+
+                // TODO - change price
+                // TODO - change variant image
+              } else {
+                // defined, but not available
+                disableSubmitButton();
+
+                // TODO - change price
+                // TODO - change variant image
+              }
+            } else {
+              // undefined or null
+              disableSubmitButton();
+
+            }
+          }
+
+          function disableSubmitButton(){
+            let btn = document.querySelector("#AddToCart");
+            btn.setAttribute("disabled","");
+            btn.textContent = "Out Of Stock";
+          }
+
+          function enableSubmitButton(){
+            let btn = document.querySelector("#AddToCart");
+            btn.removeAttribute("disabled","");
+            btn.textContent = "Add To Cart";
+          }
+
+          // wait for option_selection.js deferred loading
+          document.addEventListener('DOMContentLoaded', function(event) {
+            new Shopify.OptionSelectors('productSelect', {
+              product: {{ product | json }},
+              onVariantSelected: selectCallback,
+              enableHistoryState: true
+            });
+
+            // add BS5 layout classes to new form controls
+            let inputGroups = document.querySelectorAll("#AddToCartForm .selector-wrapper");
+
+            inputGroups.forEach(element => {
+              let inputLabel = element.querySelector("label");
+              let inputSelect = element.querySelector(".single-option-selector");
+
+              element.classList.add("mb-3");
+
+              if (inputLabel !== null) {
+                inputLabel.classList.add("form-label");
+              }
+
+              if (inputSelect !== null) {
+                inputSelect.classList.add("form-select");
+              }
+            });
+          })
+        </script>
+
+        <div class="my-5">{{ product.description }}</div>
+
       </div>
     </div>
-
   </div>
 
+  {% assign feature_image = images['2048x1152.png'] %}
+
   <div class="row g-0">
-    <div class="col-sm-6"><img class="w-100" src="https://via.placeholder.com/2048x1638?text=feature"></div>
+    <div class="col-sm-6"><img class="img-fluid" loading="lazy" width="{{ feature_image.width }}" height="{{ feature_image.height }}" src="{{ feature_image | img_url }}"></div>
     <div class="col-sm-6">
       <div class="h-100 p-5 d-flex flex-column justify-content-center text-center">
         <h3>This is a feature</h3>
@@ -97,7 +141,7 @@
   </div>
 
   <div class="row g-0">
-    <div class="col-sm-6"><img class="w-100" src="https://via.placeholder.com/2048x1638?text=feature"></div>
+    <div class="col-sm-6"><img class="img-fluid" loading="lazy" width="{{ feature_image.width }}" height="{{ feature_image.height }}" src="{{ feature_image | img_url }}"></div>
     <div class="col-sm-6 order-sm-first">
       <div class="h-100 p-5 d-flex flex-column justify-content-center text-center">
         <h3>This is a feature</h3>
@@ -107,7 +151,7 @@
   </div>
 
   <div class="row g-0">
-    <div class="col-sm-6"><img class="w-100" src="https://via.placeholder.com/2048x1638?text=feature"></div>
+    <div class="col-sm-6"><img class="img-fluid" loading="lazy" width="{{ feature_image.width }}" height="{{ feature_image.height }}" src="{{ feature_image | img_url }}"></div>
     <div class="col-sm-6">
       <div class="h-100 p-5 d-flex flex-column justify-content-center text-center">
         <h3>This is a feature</h3>
