desktop filter UI, variant image filtered display

--- a/sections/index-image-grid.liquid
+++ b/sections/index-image-grid.liquid
@@ -28,7 +28,7 @@
         {
           "type": "image_picker",
           "id": "post_image",
-          "label": "Post Image"
+          "label": "Post Image (Square 1:1)"
         },
         {
           "type": "url",
