--- a/sections/index-card-carousel.liquid
+++ b/sections/index-card-carousel.liquid
@@ -47,7 +47,7 @@
         {
           "id": "image",
           "type": "image_picker",
-          "label": "Image"
+          "label": "Image (Square 1:1)"
         },
         {
           "id": "cta_label",
