--- a/sections/index-card-grid.liquid
+++ b/sections/index-card-grid.liquid
@@ -40,7 +40,7 @@
         {
           "id": "image",
           "type": "image_picker",
-          "label": "Image"
+          "label": "Image (Square 1:1)"
         },
         {
           "id": "cta_label",
