--- a/snippets/product-grid.liquid
+++ b/snippets/product-grid.liquid
@@ -5,8 +5,8 @@
 {% else %}
   {% liquid
     assign is_filtered_view = false
-    if collection.filters != empty
-      for filter in collection.filters
+    if filters != empty
+      for filter in filters
         if filter.active_values.size > 0
           assign is_filtered_view = true
           break
@@ -15,7 +15,7 @@
     endif
   %}
 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
-  {% for product in collection.products %}
+  {% for product in products %}
 
     {% liquid
       assign display_image = product.featured_image
@@ -31,14 +31,7 @@
     %}
 
     <div class="col mb-3">
-      <div class="card h-100">
-        <img class="card-img-top h-auto" loading="lazy" width="{{ display_image.width }}" height="{{ display_image.height }}" src="{{ display_image.src | img_url: '480x480', scale: 2, crop: 'center' }}" alt="{{ display_image.alt | escape }}">
-        <div class="card-body">
-          <h5 class="card-title"><a class="stretched-link" href="{{ product.url | within: collection }}">{{ product.title }}</a></h5>
-          <p class="card-text">{{ product.price | money }}
-          {% unless product.available %}<br><strong>sold out</strong>{% endunless %}</p>
-        </div>
-      </div>
+      {% render 'product-card', product: product, image: display_image %}
     </div>
   {% endfor %}
 </div>
