--- a/sections/layout-header.liquid
+++ b/sections/layout-header.liquid
@@ -13,6 +13,11 @@
 </div>
 
 {% stylesheet %}
+#logo {
+  width: auto;
+  height: auto;
+  max-height: 60px;
+}
 {% endstylesheet %}
 
 {% schema %}
