--- a/snippets/drawer-nav.liquid
+++ b/snippets/drawer-nav.liquid
@@ -9,6 +9,7 @@
     <form action="/search" method="get" role="search">
       <div class="input-group mb-3">
         <input class="form-control form-control-lg" type="search" name="q" value="{{ search.terms | escape }}" required="required">
+        <input type="hidden" name="type" value="product">
         <button class="btn btn-primary" type="submit">Search</button>
       </div>
     </form>
